plugins {
    id 'application'
}

evaluationDependsOn(':')

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', '../../common/src/main/java']
        }
    }
}

dependencies {
    implementation project(':')
    compileOnly 'io.netty:netty-buffer:4.1.100.Final'
}

application {
    applicationName = 'zlink-java-perf-single'
    mainClass = 'dev.kairoscode.zlink.perf.single.PerfMain'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

tasks.named('run') {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
